# json-cleaner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  format.rs  main.rs  read.rs
