[package]
name = "json-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Torin May <torinmay@gmail.com"]
description = "A command line tool for easily cleaning input into valid JSON."
readme = "README.md"
homepage = "https://github.com/TorinM/json-cleaner"
repository = "https://github.com/TorinM/json-cleaner"
keywords = ["cli", "devops", "json"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.10.5"
serde_json = "1.0.117"
