[package]
name = "json-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Torin May <torinmay@gmail.com"]
description = "A command line tool for easily cleaning input into valid JSON."
readme = "README.md"
homepage = "https://github.com/TorinM/json-cleaner"
repository = "https://github.com/TorinM/json-cleaner"
keywords = ["cli", "devops", "json"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.7"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.5"
serde_json = "1.0.117"
